--- a/src/p2-homeworks/h3/Greeting.module.css
+++ b/src/p2-homeworks/h3/Greeting.module.css
@@ -1,7 +1,24 @@
-.someClass {
-
+.errorText {
+    color: red;
+    height: 20px;
 }
 
-.error {
-    border: 1px solid red;
+.errorInput {
+    outline: red;
+    border-color: red;
+    border-radius: 5px;
+}
+
+.button {
+    margin: 0 10px;
+}
+
+.input{
+    border-radius: 5px;
+}
+
+.input:focus {
+    outline: #348cb2;
+    border-color: #348cb2;
+    border-radius: 5px;
 }
