--- a/src/p2-homeworks/h3/Greeting.module.css
+++ b/src/p2-homeworks/h3/Greeting.module.css
@@ -9,11 +9,7 @@
     border-radius: 5px;
 }
 
-.button {
-    margin: 0 10px;
-}
-
-.input{
+.input {
     border-radius: 5px;
 }
 
@@ -21,4 +17,84 @@
     outline: #348cb2;
     border-color: #348cb2;
     border-radius: 5px;
+}
+
+.button {
+    margin: 0 10px;
+    padding: 10px 15px;
+    position: relative;
+    display: inline-block;
+    font-family: Consolas, cursive;
+    color: #2196f3;
+    text-transform: uppercase;
+    text-decoration: none;
+    letter-spacing: 1px;
+    overflow: hidden;
+    background-color: transparent;
+    border: none;
+    transition: 0.2s;/* плавность анимации */
+}
+
+.button:disabled {
+    cursor: not-allowed;
+}
+
+.button_line {
+    position: absolute;
+    display: block;
+}
+
+.button_line_top {
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(90deg, transparent, #2196f3);
+}
+.button:hover .button_line_top{
+    left: 100%;
+    transition: 1s;
+    transition-delay: 0.25s; /*задержка анимации*/
+}
+.button_line_right {
+    top: -100%;
+    right: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(180deg, transparent, #2196f3);
+}
+.button:hover .button_line_right{
+    top: 100%;
+    transition: 1s;
+    transition-delay: 0s; /*задержка анимации*/
+}
+.button_line_bottom {
+    bottom: 0;
+    right: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(270deg, transparent, #2196f3);
+}
+.button:hover .button_line_bottom{
+    right: 100%;
+    transition: 1s;
+    transition-delay: 0.25s; /*задержка анимации*/
+}
+.button_line_left {
+    bottom: -100%;
+    left: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(0deg, transparent, #2196f3);
+}
+.button:hover .button_line_left{
+    bottom: 100%;
+    transition: 1s;
+    transition-delay: 0s; /*задержка анимации*/
+}
+.button:hover{
+    box-shadow: 0 0 10px #2196f3, 0 0 40px #2196f3, 0 0 80px #2196f3;
+    background-color: #2196f3;
+    color: #333;
+    transition-delay: 1s;
 }
