--- a/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
+++ b/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
@@ -1,12 +1,17 @@
 .superInput {
-
+    border-radius: 5px;
 }
 
 .errorInput {
-    border: 3px solid lime;
-    background: red;
+    outline: red;
+    border-color: red;
+    border-radius: 5px;
 }
-
+.superInput:focus {
+    outline: #348cb2;
+    border-color: #348cb2;
+    border-radius: 5px;
+}
 .error {
     color: red;
 }
