--- a/src/p2-homeworks/h7/common/c6-SuperRadio/SuperRadio.css
+++ b/src/p2-homeworks/h7/common/c6-SuperRadio/SuperRadio.css
@@ -13,12 +13,9 @@
     border: 2px solid lawngreen;
 }
 
-.checkRadio:checked {
-    background: #90ee90;
-}
-
 .checkRadio:focus {
     border: 2px solid forestgreen;
+    background-color: #90ee90
 }
 
 .labelRadio {
