--- a/src/p2-homeworks/h7/common/c6-SuperRadio/SuperRadio.module.css
+++ b/src/p2-homeworks/h7/common/c6-SuperRadio/SuperRadio.module.css
@@ -13,9 +13,15 @@
     border: 2px solid lawngreen;
 }
 
+.checkRadio:checked {
+    background: #90ee90;
+    color: #90ee90;
+}
+
+
 .checkRadio:focus {
     border: 2px solid forestgreen;
-    background-color: #90ee90
+    /*background-color: #90ee90*/
 }
 
 .labelRadio {
