--- a/src/p2-homeworks/h7/common/c5-SuperSelect/SuperSelect.module.css
+++ b/src/p2-homeworks/h7/common/c5-SuperSelect/SuperSelect.module.css
@@ -7,7 +7,7 @@
     outline: none;
     padding: 1px 5px;
     appearance: none;
-    background-image: url("https://cdn.icon-icons.com/icons2/510/PNG/128/arrow-down-a_icon-icons.com_50480.png");
+    background-image: url("../../../../icons/arrow-down-a_icon-icons.com_50480.png");
     background-repeat: no-repeat, repeat;
     background-position: right .7em top 50%, 0 0;
     background-size: .65em auto, 100%;
